--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1449,6 +1449,99 @@
   address = {New York, NY, USA}
 }
 
+@inproceedings{Evans66,
+  author = {Evans, Thomas G. and Darley, D. Lucille},
+  title = {{On-line Debugging Techniques: A Survey}},
+  booktitle = {Proceedings of the November 7-10, 1966, Fall Joint Computer Conference},
+  series = {AFIPS '66 (Fall)},
+  year = {1966},
+  location = {San Francisco, California},
+  pages = {37--50},
+  numpages = {14},
+  url = {http://doi.acm.org/10.1145/1464291.1464295},
+  doi = {10.1145/1464291.1464295},
+  acmid = {1464295},
+  publisher = {ACM},
+  address = {New York, NY, USA}
+}
+
+@article{Hennessy82,
+  author = {Hennessy, John},
+  title = {{Symbolic Debugging of Optimized Code}},
+  journal = {ACM Transactions on Programming Languages and Systems},
+  issue_date = {July 1982},
+  volume = {4},
+  number = {3},
+  month = jul,
+  year = {1982},
+  issn = {0164-0925},
+  pages = {323--344},
+  numpages = {22},
+  url = {http://doi.acm.org/10.1145/357172.357173},
+  doi = {10.1145/357172.357173},
+  acmid = {357173},
+  publisher = {ACM},
+  address = {New York, NY, USA}
+}
+
+@Inbook{Jaramillo00,
+  author = {Jaramillo, Clara and Gupta, Rajiv and Soffa, Mary Lou},
+  editor = {Palsberg, Jens},
+  chapter = {{{FULLDOC}: A Full Reporting Debugger for Optimized Code}},
+  title = {Static Analysis: 7th International Symposium, SAS 2000, Santa Barbara, CA, USA, June 29 - July 1, 2000. Proceedings},
+  year = {2000},
+  publisher = {Springer Berlin Heidelberg},
+  address = {Berlin, Heidelberg},
+  pages = {240--259},
+  isbn = {978-3-540-45099-3},
+  doi = {10.1007/978-3-540-45099-3_13},
+  url = {http://dx.doi.org/10.1007/978-3-540-45099-3_13}
+}
+
+@inproceedings{Adl-Tabatabai96,
+  author = {Adl-Tabatabai, Ali-Reza and Gross, Thomas},
+  title = {{Source-level Debugging of Scalar Optimized Code}},
+  booktitle = {Proceedings of the ACM SIGPLAN 1996 Conference on Programming Language Design and Implementation},
+  series = {PLDI '96},
+  year = {1996},
+  isbn = {0-89791-795-2},
+  location = {Philadelphia, Pennsylvania, USA},
+  pages = {33--43},
+  numpages = {11},
+  url = {http://doi.acm.org/10.1145/231379.231388},
+  doi = {10.1145/231379.231388},
+  acmid = {231388},
+  publisher = {ACM},
+  address = {New York, NY, USA}
+}
+
+@phdthesis{Adl-Tabatabai96thesis,
+  author = {Adl-Tabatabai, Ali-Reza},
+  advisor = {Gross, Thomas},
+  title = {{Source-Level Debugging of Globally Optimized Code}},
+  year = {1996},  
+  publisher = {Carnegie Mellon University},
+  address = {Pittsburgh, PA, USA}
+}
+
+@inproceedings{Wu99,
+  author = {Wu, Le-Chun and Mirani, Rajiv and Patil, Harish and Olsen, Bruce and Hwu, Wen-mei W.},
+  title = {{A New Framework for Debugging Globally Optimized Code}},
+  booktitle = {Proceedings of the ACM SIGPLAN 1999 Conference on Programming Language Design and Implementation},
+  series = {PLDI '99},
+  year = {1999},
+  isbn = {1-58113-094-5},
+  location = {Atlanta, Georgia, USA},
+  pages = {181--191},
+  numpages = {11},
+  url = {http://doi.acm.org/10.1145/301618.301663},
+  doi = {10.1145/301618.301663},
+  acmid = {301663},
+  publisher = {ACM},
+  address = {New York, NY, USA}
+}
+
+
 
 %% MISC (URLs)
 @misc{perf,
