--- a/case-studies.tex
+++ b/case-studies.tex
@@ -5,5 +5,4 @@
 
 \input{case-study-kblpp}
 \input{case-study-mcvm}
-
-\section{Source-level Debugging of Optimized Code}
+\input{case-study-debugging}
