--- a/header.tex
+++ b/header.tex
@@ -141,7 +141,9 @@
 \newcommand{\apply}{\mytt{apply}}
 \newcommand{\dopasses}{\mytt{do\_passes}}
 % misc
+\newcommand{\alloca}{\mytt{alloca}}
 \newcommand{\load}{\mytt{load}}
+\newcommand{\memtoreg}{\mytt{mem2reg}}
 \newcommand{\store}{\mytt{store}}
 \newcommand{\RAUW}{\mytt{replace\_all}}
 \newcommand{\RAUWfull}{\mytt{replace\_all}$(O, N)$}
